# FastMath

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-docs.yml  cmake-multi-platform.yml
_docs/: c.list  fm.tree  redirection-rules.xml  v.list  writerside.cfg
_docs/cfg/: buildprofiles.xml  glossary.xml
_docs/snippets/: AliasTemplates.hpp  Array.cpp  Array.hpp  FunctionTemplates.cpp  FunctionTemplates.hpp  TemplateParameters.hpp  VariableTemplates.cpp  VariableTemplates.hpp  VariadicTemplates.cpp  VariadicTemplates.hpp
_docs/topics/: Alias-Template.md  C-Templates.md  Class-Templates.md  Explicit-Instantiation.md  FastMath-Library.md  Function-Templates.md  Partial-Specialization.md  Template-Parameters.md  Template-Specialization.md  Variable-Templates.md  Variadic-Templates.md  Vectors.md  index.md
examples/: CMakeLists.txt
examples/01-Vectors/: CMakeLists.txt  main.cpp
inc/FastMath/: Common.hpp  Concepts.hpp  Config.hpp  FastMath.natvis  Math.hpp  Matrix.hpp  MatrixBase.hpp  Quaternion.hpp  QuaternionBase.hpp  Transform.hpp  Vector.hpp  VectorBase.hpp
perf/: CMakeLists.txt  VectorPerf.cpp
src/: CMakeLists.txt  FastMath.cpp
tests/: CMakeLists.txt  MatrixTests.cpp  QuaternionTests.cpp  VectorTests.cpp
